@@ -4,7 +4,7 @@ use warnings;
 use 5.010;
 use utf8;
 
-our $VERSION = '3.10';
+our $VERSION = '3.11';
 
 binmode( STDOUT, ':encoding(utf-8)' );
 
@@ -633,7 +633,7 @@ B<efa-m> [B<-s> I<service>] I<tripid>
 
 =head1 VERSION
 
-version 3.10
+version 3.11
 
 =head1 DESCRIPTION
 
